--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -1,12 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12 col-xl-9">
+    <div class="col-xl-10 col-md-12">
+      <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin"
+           style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
+        <h4 class="text-white text-center text-uppercase mb-0">Aggiungi coupon</h4>
+      </div>
       <div class="card">
-        <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
-            <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
-            <h6 class="display-4" style="float:left; font-size:30pt;">Aggiungi un Coupon</h6>
-        </div>
-
         <div class="card-body p-5">
           <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
             <div class="form-group row">
@@ -137,6 +136,7 @@
                        [noCalendar]="false"
                        [convertModelValue]="true"
                        [enableTime]="true"
+                       [placeholder]="'Seleziona data di scadenza'"
                        dateFormat="Y-m-d H:i"  formControlName="valid_until" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors?.MatchDateFromUntil }"/>
                 <div *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil" class="invalid-feedback">
@@ -156,7 +156,7 @@
             <div class="form-group row">
               <label class="col-sm-4 col-lg-2 col-form-label">Luogo</label>
               <div class="col-sm-4 col-lg-8">
-                <input google-place type="text" formControlName="constraints" class="form-control" placeholder="Type to search.."
+                <input google-place type="text" formControlName="constraints" class="form-control" placeholder="Cerca luogo..."
                   [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"
                        (onSelect)="setAddress($event)"/>
                 <!-- Displaying the contents of the address object received from our event emitter -->
@@ -186,15 +186,15 @@
             <div class="form-group row">
               <label class="col-sm-4 col-lg-2 col-form-label">Acquisto max per utente</label>
               <div  class="col-sm-4 col-lg-8">
-                <input  type="text" formControlName="purchasable" class="form-control"
+                <input type="number" formControlName="purchasable" class="form-control" min="1"
                         [ngClass]="{ 'is-invalid': submitted && f.purchasable.errors }"/>
                 <div *ngIf="submitted && f.purchasable.errors" class="invalid-feedback">
                   <div *ngIf="f.purchasable.errors">Questo valore deve essere inferiore o uguale alla quantità creata</div>
                 </div>
               </div>
-              <div class="col-sm-4 col-lg-2 my-auto">
+              <div class="col-sm-4 col-lg-2 mt-2">
                 <div class="custom-control custom-checkbox">
-                  <input  type="checkbox" class="custom-control-input" id="quantityCheck"
+                  <input type="checkbox" class="custom-control-input" id="quantityCheck"
                          (change)="toggleCheckbox($event)" data-md-icheck>
                   <label class="custom-control-label" for="quantityCheck">Senza limiti</label>
                 </div>
