--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="couponPass !== null && categoriesUpdate" class="container-fluid">
+
   <div class="row">
-    <div class="col-lg-12 col-xl-9">
-      <div class="card mx-3">
-        <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
-          <img src="assets/img/add_coupon.png" alt="{{fromEdit ? 'Modifica' : 'Crea'}} nuovo coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">{{fromEdit ? 'Modifica ' : 'Crea '}} coupon</h6>
-        </div>
+    <div class="col-xl-10 col-md-12">
+      <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin"
+           style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
+        <h4 class="text-white text-center text-uppercase mb-0">{{fromEdit ? 'Modifica ' : 'Aggiungi '}} coupon</h4>
+      </div>
+      <div class="card">
         <div class="card-body p-5">
           <form [formGroup]="couponForm" (ngSubmit)="saveChange()">
 
