--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -331,3 +331,11 @@ tbody > tr.bg-blue > td {
 th[sortable-column] {
   cursor: pointer;
 }
+
+[hidden] {
+  display: none !important;
+}
+
+a.dropdown-item:hover {
+  cursor: pointer;
+}
