--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
@@ -42,3 +42,21 @@ qrcode img {
   height: auto;
   //max-height: 100px;
 }
+
+.coupon-border-detail {
+  border-radius: 15px;
+  background-color: #efefef;
+
+  b {
+    font-size: 15px;
+    color: #333;
+  }
+}
+
+.package-coupons .coupon-border-detail {
+  margin-bottom: 1.5rem;
+}
+
+.package-coupons .coupon-border-detail:last-child {
+  margin-bottom: 0;
+}
