--- a/src/app/features/reserved-area/broker/package-create/package-create.component.html
+++ b/src/app/features/reserved-area/broker/package-create/package-create.component.html
@@ -93,7 +93,7 @@
             </div> <!-- Visible from -->
 
             <div *ngIf="couponsAvailable" class="form-group row mb-0">
-              <label class="col-sm-2 col-form-label">Seleziona coupons: </label>
+              <label class="col-sm-2 col-form-label">Seleziona coupon: </label>
               <div class="col-sm-12 col-lg-8">
 
                 <select class="form-control" formControlName="coupons" (change)="openModal(couponAdding)"
@@ -158,6 +158,7 @@
                        [noCalendar]="false"
                        [convertModelValue]="true"
                        [enableTime]="true"
+                       [placeholder]="'Seleziona data di scadenza'"
                        dateFormat="Y-m-d H:i"  formControlName="valid_until" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors?.MatchDateFromUntil }"/>
                 <div *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil" class="invalid-feedback">
