--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -324,7 +324,7 @@
 
 <ng-template #paymentModal>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Pagamento #{{lastId}}</h4>
+    <h4 class="modal-title pull-left">Ordine di pagamento #{{lastId}}</h4>
   </div>
 
   <div class="modal-body">
