--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -73,3 +73,17 @@
 
 }
 
+#container{width:100%;}
+#left{float:left;width:100px;}
+#right{width:100px; position: fixed;
+  top:0px!important;
+  right:0px!important;
+  z-index:10!important;}
+#center{margin:0 auto;width:100px;}
+
+#container-right{width:100%; }
+#left-right{float:left;width:100px;}
+#right-right{float:right;width:100px;}
+#right-right-1{float:right;width:100px;}
+
+
