--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -162,6 +162,7 @@ app-core-breadcrumb nav {
 
 #select-category {
   height: 35px;
+  width: 155px!important;
 }
 
 @media only screen and (max-width: 768px){
