--- a/src/app/features/reserved-area/producer/report/coupon-report.component.scss
+++ b/src/app/features/reserved-area/producer/report/coupon-report.component.scss
@@ -1,9 +1,6 @@
-h1:not(:first-of-type) {
-  margin-top: 2rem;
-}
 
-pre {
-  padding: 15px 0 0;
-  min-height: 40px;
-  white-space: normal;
+margin-top {
+  margin-top: 122%!important;
+  display: block;
+  z-index: -4!important;
 }
