--- a/src/app/features/reserved-area/producer/report/coupon-report.component.html
+++ b/src/app/features/reserved-area/producer/report/coupon-report.component.html
@@ -6,36 +6,50 @@
         <h4 class="text-white text-center text-uppercase mb-0">Coupon Report</h4>
       </div>
       <div class="card">
-        <div *ngIf="areDataAvailable() && !loading" class="p-4">
-          <div class="row col-4 d-flex ml-auto">
+        <div *ngIf="areaDataAvailable() && !loading" class="p-4">
+          <div class="row col-sm-6 col-md-6 col-xl-4  col-8 d-flex ml-auto ">
             <select [ngModel]="rangeSelected" class='form-control'
                     (change)="ChangingRange($event)">
               <option *ngFor="let item of range" [ngValue]=item>{{translate(item)}}</option>
             </select>
           </div>
-          <div class="row mx-auto">
-            <google-chart
-              [data]="barChart"
-              class="col-xl-6 col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"
-            ></google-chart>
+          <div  class="row margin-top ">
+            <div style="margin-right: 2em!important; margin-left: 2em!important;">
+              <google-chart
+                [data]="barChart"
+                class=" margin-top col-xl-6 col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"
+              ></google-chart>
+            </div>
+            <div style=" margin-left: 2em!important;">
+
             <google-chart
               [data]="barChartForBoughtProducerMoney"
-              class="col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"
+              class="margin-top col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"
             ></google-chart>
           </div>
-          <div class="row">
-            <google-chart [data]="barChartForBoughtProducerQuantity"
-                          class="col-xl-6 col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"></google-chart>
+
+        </div>
+          <div class="row margin-top">
+            <div style="margin-right: 2em!important; margin-left: 2em!important;">
+
+              <google-chart [data]="barChartForBoughtProducerQuantity"
+                          class=" margin-top col-xl-6 col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"></google-chart>
+            </div>
+            <div style=" margin-left: 2em!important;">
+
             <google-chart [data]="barChartForBoughtBrokersQuantity" class="col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"></google-chart>
           </div>
-          <div class="row">
-            <google-chart *ngIf="pieChart.dataTable.length !== 0" [data]="pieChart"
-                          class="col-xl-6 col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"></google-chart>
-            <google-chart *ngIf="pieChart.dataTable.length !== 0" [data]="pieChart"
-                          class="col-lg-6 col-md-10 col-12 offset-lg-0 offset-md-1 offset-0"></google-chart>
-          </div>
+
+      </div>
+
         </div>
-        <div *ngIf="!areDataAvailable() && !loading" class="p-4">
+        <div *ngIf="!areaDataAvailable() && !loading" class="p-4">
+          <div class="row col-4 d-flex ml-auto ">
+            <select [ngModel]="rangeSelected" class='form-control'
+                    (change)="ChangingRange($event)">
+              <option *ngFor="let item of range" [ngValue]=item>{{translate(item)}}</option>
+            </select>
+          </div>
           <h3>Non sono presenti abbastanza dati per mostrare delle statistiche a riguardo.</h3>
         </div>
       </div>
