[fix] fix  report mobile show [fix] fix breadcrumb mobile show

--- a/src/app/features/reserved-area/producer/report/coupon-report.component.html
+++ b/src/app/features/reserved-area/producer/report/coupon-report.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mb-0">
   <div class="row">
     <div class="col-xl-8 col-lg-11 col-md-12">
-      <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin"
+      <div class="col-8 col-sm-6 col-lg-5 col-md-6 p-3 bg-red-sardcoin"
            style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
         <h4 class="text-white text-center text-uppercase mb-0">Coupon Report</h4>
       </div>
