[fix] fix  show footer for mobile

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div *ngIf="!isDesktop" class="w-100 bg-gray-sardcoin text-center py-1">
-      <p class="w-100 text-white"><a class="text-secondary" href="https://www.sardcoin.eu">SardCoin</a> © {{this.copyrightYear}} UniCA</p>
-      <p class="w-100 text-white">Realizzato da <a class="text-info" href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">UniCA - DMI</a></p>
+      <h6 class="w-100 text-white"><a class="text-secondary" href="https://www.sardcoin.eu">SardCoin</a> © {{this.copyrightYear}} UniCA</h6>
+      <h6 class="w-100 text-white bg-gray-sardcoin">Realizzato da <a class="text-info" href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">UniCA - DMI</a></h6>
   </div>
 <!--</footer>-->
