--- a/src/app/features/reserved-area/broker/package-list/package-list.component.html
+++ b/src/app/features/reserved-area/broker/package-list/package-list.component.html
@@ -1,5 +1,6 @@
+<div [hidden]="!data">
 <!-- Table -->
-<div *ngIf="dataExists()" class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
+<div [hidden]="!dataExists()" class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
   <table [dataSource]="dataSource" class="table-striped w-100 mt-4 mt-md-0" mat-table matSort>
 
     <!-- Title Column -->
@@ -107,6 +108,7 @@
   <div class="alert alert-primary text-left p-2" style="max-width: 400px;" role="alert">
     <h4 class="mb-0">Non hai ancora creato pacchetti.</h4>
   </div>
+</div>
 </div>
 
 <!-- Modal deletion template -->
