--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -1,5 +1,6 @@
+<div [hidden]="!data">
 <!-- Table -->
-<div *ngIf="dataExists()" class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
+<div [hidden]="!dataExists()" class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
   <table mat-table [dataSource]="dataSource" matSort class="table-striped w-100 mt-4 mt-md-0">
 
     <!-- Title Column -->
@@ -70,7 +71,7 @@
 
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
 </div>
 
 <!-- SM CARD -->
@@ -109,7 +110,7 @@
     <h4 class="mb-0">Non hai ancora creato coupon.</h4>
   </div>
 </div>
-
+</div>
 <!-- Modal deletion template -->
 <ng-template #template>
   <div class="modal-header">
