[fix] fix swich copy/edit package to create

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -80,7 +80,7 @@
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-box icon-dimension"></span></div>
           <span class="menu-collapsed">I miei pacchetti</span>
         </a>
-        <a [routerLink]="['/reserved-area/broker/create']" class="list-group-item list-group-item-action gray-sardcoin">
+        <a [routerLink]="['/reserved-area/broker/create/']" [queryParams]="{ fromMenu: true }" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-plus-circle icon-dimension"></span></div>
           <span class="menu-collapsed">Crea pacchetto</span>
         </a>
