--- a/src/app/features/reserved-area/broker/package-create/package-create.component.html
+++ b/src/app/features/reserved-area/broker/package-create/package-create.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="packageForm" class="container-fluid">
   <div class="row">
     <div class="col-lg-12 col-xl-9">
       <div class="card">
