--- a/src/app/features/reserved-area/producer/coupon-offline-details/coupon-offline-details.component.html
+++ b/src/app/features/reserved-area/producer/coupon-offline-details/coupon-offline-details.component.html
@@ -10,18 +10,21 @@
 
 
         <p class="card-text mt-3">{{couponPass.description}}</p>
-        <p *ngIf="couponPass.CouponTokens.length > 10" class="card-text"><i style="color:#0c8a33">Alta disponibilità</i></p>
+        <div *ngIf="couponPass.CouponTokens">
+          <p *ngIf="couponPass.CouponTokens.length > 10" class="card-text"><i style="color:#0c8a33">Alta disponibilità</i></p>
 
-        <p *ngIf="couponPass.CouponTokens.length > 4 && couponPass.CouponTokens.length < 10" class="card-text"><i style="color:#ffd51c">Bassa
-          disponibilità ({{couponPass.CouponTokens.length}})</i></p>
+          <p *ngIf="couponPass.CouponTokens.length > 4 && couponPass.CouponTokens.length < 10" class="card-text"><i style="color:#ffd51c">Bassa
+            disponibilità ({{couponPass.CouponTokens.length}})</i></p>
 
-        <p *ngIf="couponPass.CouponTokens.length > 0 && couponPass.CouponTokens.length < 5" class="card-text">
-          <i style="color:#FF0000">
-            Solo {{couponPass.CouponTokens.length}} disponibil{{couponPass.CouponTokens.length === 1 ? 'e' : 'i'}}
-          </i>
-        </p>
-        <p *ngIf="couponPass.CouponTokens.length < 1" class="card-text"><i style="color:rgba(55,87,85,0.15)">Esauriti</i>
-        </p>
+          <p *ngIf="couponPass.CouponTokens.length > 0 && couponPass.CouponTokens.length < 5" class="card-text">
+            <i style="color:#FF0000">
+              Solo {{couponPass.CouponTokens.length}} disponibil{{couponPass.CouponTokens.length === 1 ? 'e' : 'i'}}
+            </i>
+          </p>
+          <p *ngIf="couponPass.CouponTokens.length < 1" class="card-text"><i style="color:rgba(55,87,85,0.15)">Esauriti</i>
+          </p>
+        </div>
+        <p *ngIf="!couponPass.CouponTokens" class="card-text"><i style="color:rgba(55,87,85,0.15)">Esauriti</i>
 
         <p class="card-text">
           <i class="fas fa-fw  fa-clock text-secondary"></i> Validità: {{formatUntil(couponPass.valid_until)}}
@@ -35,36 +38,19 @@
               >
             </span>
         </p>
-        <div class="package-coupons" *ngIf="couponsPackage !== null">
-          <p><i class="fas fa-fw fa-box-open text-secondary"></i> Coupons inclusi nel pacchetto: <i style="color: #999;">({{getNumberCoupons()}})</i></p>
-          <div *ngFor="let cp of couponsPackage | keyvalue">
-            <div class="striped d-block d-md-block d-xl-block">
-              <i class="d-block my-1" style="color: #999; font-size: 15px;">{{cp.value[0].title}} ({{cp.value.length}})</i>
-              <div class="w-50 d-inline-block">
-                <img class="img-fluid" src="{{imageURL + cp.value[0].image}}">
-              </div>
-              <div class="w-50 d-inline-block">
-                <img class="img-fluid"
-                     src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' + cp.value[0].constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}">
-                <!--<h5 class="centered-text-image-map" *ngIf="couponsPackage[key].constraints == null"> Mappa assente</h5>-->
-              </div>
-            </div>
-            <!--<hr *ngIf="(i+1) < Object.keys(couponsPackage).length"/>-->
-          </div>
-        </div>
 
         <div class="mt-4" *ngIf="desktopMode">
-          <button class="btn btn-lg btn-success float-right ml-2" (click)="openModal(template)">Vendi</button>
+          <button *ngIf="couponPass.CouponTokens? couponPass.CouponTokens.length > 0: false" class="btn btn-lg btn-success float-right ml-2" (click)="openModal(template)">Vendi</button>
 
           <button class="btn btn-lg btn-primary float-right ml-2" (click)="retry()">Ritorna alla Lista</button>
 
         </div>
 
         <div *ngIf="!desktopMode">
-          <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0 && isUserLoggedIn"
+          <button *ngIf="couponPass.CouponTokens? couponPass.CouponTokens.length > 0: false"
                   class="btn  btn-success float-right ml-2"
-                  [disabled]="couponPass.max_quantity === 0 || couponPass.quantity === 0" (click)="openModal(template)">
-            <i class="fas fa-cart-plus"> </i> Aggiungi
+                  (click)="openModal(template)">
+            <i class="fas fa-cart-plus"> </i> Vendi
           </button>
           <button class="btn  btn-primary float-right" (click)="retry()"><i class="fas fa-shopping-basket">
           </i> Lista
