--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -1,31 +1,31 @@
-<div *ngIf="couponPass !== null && categoriesUpdate" class="container-fluid">
+<div *ngIf="couponPass !== null && categoriesUpdate" class="container-fluid mb-0">
   <div class="row">
-    <div class="col-lg-12 col-xl-9">
-      <div class="card mx-3">
-        <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
-          <img src="assets/img/add_coupon.png" alt="{{fromEdit ? 'Modifica' : 'Crea'}} nuovo coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">{{fromEdit ? 'Modifica ' : 'Crea '}} coupon</h6>
-        </div>
+    <div class="col-xl-8 col-lg-11 col-md-12">
+      <div class="col-sm-6 col-lg-5 col-md-6 p-3 bg-red-sardcoin"
+           style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
+        <h4 class="text-white text-center text-uppercase mb-0">{{fromEdit ? 'Modifica ' : 'Crea '}} un coupon</h4>
+      </div>
+      <div class="card">
         <div class="card-body p-5">
           <form [formGroup]="couponForm" (ngSubmit)="saveChange()">
 
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Titolo</label>
               <div class="col-sm-10">
-                <input type="text" formControlName="title" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
+                <textarea rows="2" type="text" formControlName="title" class="form-control"
+                          [ngClass]="{ 'is-invalid': submitted && f.title.errors }"></textarea>
                 <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
-                  <div *ngIf="f.title.errors">Titolo obbligatorio, da 5 a 40 caratteri</div>
+                  <div *ngIf="f.title.errors">Titolo obbligatorio, da 5 a 80 caratteri</div>
                 </div>
               </div>
             </div> <!-- Title -->
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Descrizione:</label>
               <div class="col-sm-10">
-                <textarea type="text" formControlName="description" class="form-control"
+                <textarea rows="7" type="text" formControlName="description" class="form-control"
                           [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
                 <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
-                  <div *ngIf="f.description.errors">Descrizione obbligatoria, deve essere tra 5 e 255 caratteri</div>
+                  <div *ngIf="f.description.errors">Descrizione obbligatoria, deve essere tra 5 e 500 caratteri</div>
                 </div>
               </div>
             </div> <!-- Description -->
