--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.scss
@@ -38,3 +38,11 @@ td {
   border: 0 !important;
 }
 
+#greetings {
+  width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
