[feat/refactor] prepare showcase, detail, cart e checkout for new implementation paypal

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -221,7 +221,7 @@
   </div>
 
   <div class="modal-body">
-    <p>Attenzione: effettuando il logout perderai il contenuto del carrello.</p>
+    <p>Attenzione: effettuando il logout perderai il contenuto della cassa.</p>
   </div>
 
   <div  class="modal-footer">
