--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -60,7 +60,7 @@
               </div>
 
               <div class="modal-body">
-                Vuoi davvero rimuovere questo coupon dal carrello?
+                Vuoi davvero rimuovere questo coupon dalla cassa?
               </div>
 
               <div class="modal-footer">
@@ -78,13 +78,13 @@
         </div>
         <div class="card-body p-0">
           <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
-            class="fas fa-euro-sign mr-2"></i>Vai alla cassa
+            class="fas fa-euro-sign mr-2"></i>Vai al riepilogo
           </button>
           <button class="btn btn-lg btn-primary float-right" (click)="retry()">
             <i class="fas fa-shopping-basket mr-2"></i>Vai allo shopping
           </button>
           <button class="btn btn-lg btn-warning text-white float-left" (click)="openModal(emptyCartTemplate)"><i
-            class="fas fa-trash"></i> Svuota il Carrello
+            class="fas fa-trash"></i> Svuota la cassa
           </button>
         </div>
       </div><!-- XL + LG VIEW -->
@@ -135,7 +135,7 @@
               </div>
 
               <div class="modal-body">
-                Vuoi davvero rimuovere questo coupon dal carrello?
+                Vuoi davvero rimuovere questo coupon dalla cassa?
               </div>
 
               <div class="modal-footer">
@@ -153,11 +153,11 @@
         </div>
         <div class="card-body p-0">
           <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
-            class="fas fa-euro-sign mr-2"></i>Vai alla cassa
+            class="fas fa-euro-sign mr-2"></i>Vai al riepilogo
           </button>
           <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
           <button class="btn btn-lg btn-warning text-white float-left" (click)="openModal(emptyCartTemplate)"><i
-            class="fas fa-trash"></i> Svuota il Carrello
+            class="fas fa-trash"></i> Svuota la cassa
           </button>
         </div>
       </div> <!-- MD VIEW -->
@@ -208,7 +208,7 @@
               </div>
 
               <div class="modal-body">
-                Vuoi davvero rimuovere questo coupon dal carrello?
+                Vuoi davvero rimuovere questo coupon dalla cassa?
               </div>
 
               <div class="modal-footer">
@@ -242,7 +242,7 @@
 <div *ngIf="cart.length === 0" class="container-fluid">
   <div class="col-sm-12 text-center">
     <img class="img-fluid" src="assets/img/empty.png">
-    <h3 class="display-3" style="font-size: 2rem;">Il carrello è vuoto!</h3>
+    <h3 class="display-3" style="font-size: 2rem;">la cassa è vuoto!</h3>
   </div>
   <div class="col-sm-12 mt-4 text-center d-xl-block d-lg-block d-md-block d-sm-block d-none">
     <button *ngIf="isUserLoggedIn && true" class="btn btn-lg btn-success mr-2" type="button" (click)="openBought()">
@@ -268,14 +268,14 @@
 
 <ng-template #emptyCartTemplate>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Conferma per svuotare il carrello</h4>
+    <h4 class="modal-title pull-left">Conferma per svuotare la cassa</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="modal-body">
-    <p>Sei davvero sicuro di svuotare il carrello? Questa operazione non è reversibile.</p>
+    <p>Sei davvero sicuro di svuotare la cassa? Questa operazione non è reversibile.</p>
   </div>
 
   <div class="modal-footer">
