--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -8,7 +8,7 @@
 
     <div class="col-lg-6 col-xl-4 col-md-6 col col-sm-6 col-12 mb-3 pl-3 pr-0" *ngFor="let coupon of coupons">
       <div class="card" [ngClass]="{'package-style': coupon.type === ITEM_TYPE.PACKAGE}">
-        <img class="crop centered-and-cropped" [ngStyle]="{'opacity': inCart(coupon.id) ? '0.5' : '1'}"
+        <img class="crop centered-and-cropped" [ngStyle]="{'opacity': !isCartEmpty() && !inCart(coupon.id) ? '0.5' : '1'}"
              [src]="imageUrl(coupon.image)" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">
@@ -17,10 +17,10 @@
           <p class="card-text pt-0">{{coupon.description}}</p>
         </div>
         <div class="card-footer">
-          <button *ngIf="!userType || userType == 2" [disabled]="inCart(coupon.id)" type="button"
-                  class="btn btn-success float-right ml-1" title="{{inCart(coupon.id) ?
-         'Articolo già aggiunto: vai al carrello per cambiare la quantità.' : ''}}"
-                  (click)="openModal(template, coupon)"><i class="fas fa-cart-plus"></i> Aggiungi
+          <button *ngIf="!userType || userType == 2" [disabled]="!isCartEmpty() && !inCart(coupon.id)" type="button"
+                  class="btn btn-success float-right ml-1" title="{{!inCart(coupon.id) ?
+         'hai già un oggetto nella cassa, rimuovilo o completa l\'acquisto prima di acquistarne altri' : ''}}"
+                  (click)="inCart(coupon.id)? viewCart(): openModal(template, coupon)"><i class="fas fa-euro-sign"></i> {{inCart(coupon.id)? 'Paga': 'Acquista'}}
           </button>
           <button type="button" class="btn btn-primary text-white float-right" (click)="details(coupon)"><i
             class="fas fa-info-circle"></i> Dettagli
@@ -29,7 +29,7 @@
         <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
         <div *ngIf="coupon.type === ITEM_TYPE.PACKAGE" class="coupon-package text-uppercase"><i class="fas fa-box-open mr-1"></i> Pacchetto</div>
         <div class="coupon-cart cursor-pointer" *ngIf="inCart(coupon.id)" (click)="viewCart()">
-          <i class="fas fa-cart-arrow-down"></i>
+          <i class="fas fa-euro-sign"></i>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left"><i class="fas fa-plus-circle mr-3"></i>Aggiungi "{{modalCoupon.title.length > 20 ?
-      modalCoupon.title.substring(0, 20) + '...' : modalCoupon.title}}" nel carrello</h4>
+      modalCoupon.title.substring(0, 20) + '...' : modalCoupon.title}}" nella cassa</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -69,8 +69,8 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="decline()">Annulla</button>
-    <button [disabled]="inCart(modalCoupon.id)" type="button" class="btn btn-success" (click)="addToCart(modalCoupon)">
-      Aggiungi
+    <button [disabled]="!isCartEmpty()" type="button" class="btn btn-success" (click)="addToCart(modalCoupon)">
+      Acquista
     </button>
   </div>
 </ng-template>
