[refactor] fix new  show payment mode for mobile

--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -67,7 +67,7 @@
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al Carrello
+                Ritorna alla Cassa
               </button>
             </div> <!-- XL TABLE -->
             <div class="container-fluid d-none d-md-none d-lg-block d-xl-none">
@@ -129,7 +129,7 @@
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al Carrello
+                Ritorna alla Cassa
               </button>
             </div> <!-- LG TABLE -->
             <div class="container-fluid d-none d-md-block d-lg-none">
@@ -192,7 +192,7 @@
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al Carrello
+                Ritorna alla Cassa
               </button>
             </div> <!-- MD TABLE -->
             <div class="d-none d-sm-block d-lg-none d-md-none d-xl-none">
@@ -249,7 +249,7 @@
               </button>
               <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al carrello
+                Ritorna alla Cassa
               </button>
             </div><!-- SM CARD -->
             <div class="d-block d-xl-none d-sm-none d-md-none d-lg-none ">
@@ -307,7 +307,7 @@
               </button>
               <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Carrello
+                Cassa
               </button>
             </div><!-- XS CARD -->
           </div>
@@ -375,7 +375,7 @@
                 </button>
                 <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                   <i class="fas fa-shopping-basket"></i>
-                  Ritorna al Carrello
+                  Ritorna alla Cassa
                 </button>
               </div> <!-- XL TABLE -->
               <div class="container-fluid d-none d-md-none d-lg-block d-xl-none">
@@ -437,7 +437,7 @@
                 </button>
                 <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                   <i class="fas fa-shopping-basket"></i>
-                  Ritorna al Carrello
+                  Ritorna alla Cassa
                 </button>
               </div> <!-- LG TABLE -->
               <div class="container-fluid d-none d-md-block d-lg-none">
@@ -500,7 +500,7 @@
                 </button>
                 <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                   <i class="fas fa-shopping-basket"></i>
-                  Ritorna al Carrello
+                  Ritorna alla Cassa
                 </button>
               </div> <!-- MD TABLE -->
               <div class="d-none d-sm-block d-lg-none d-md-none d-xl-none">
@@ -557,7 +557,7 @@
                 </button>
                 <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
                   <i class="fas fa-shopping-basket"></i>
-                  Ritorna al carrello
+                  Ritorna alla Cassa
                 </button>
               </div><!-- SM CARD -->
               <div class="d-block d-xl-none d-sm-none d-md-none d-lg-none ">
@@ -615,7 +615,7 @@
                 </button>
                 <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
                   <i class="fas fa-shopping-basket"></i>
-                  Carrello
+                  Cassa
                 </button>
               </div><!-- XS CARD -->
             </div>
@@ -643,8 +643,8 @@
 
 
 <div *ngIf="cart.length === 0">
-  <h2>Prima di fare il checkout, si prega di aggiungere alcuni prodotti al carrello.</h2>
-  <button class="col-sm-5 btn btn-danger" (click)="retry()">Ritorna al Carrello</button>
+  <h2>Prima di fare il checkout, si prega di aggiungere il prodotto nella cassa..</h2>
+  <button class="col-sm-5 btn btn-danger" (click)="retry()">Ritorna alla Cassa</button>
 </div>
 
 <ng-template #paymentModal>
