--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xl-7 col-lg-10 col-md-12">
       <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin" style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
-        <h4 class="text-white text-center text-uppercase mb-0">Importa Coupon</h4>
+        <h4 class="text-white text-center text-uppercase mb-0">Importa coupon</h4>
       </div>
       <div class="card">
         <div class="card-body px-5 pt-4">
